# pair-commit-rust

./: .editorconfig  .gitignore  Cargo.toml  Makefile  README.md  prepare-commit-msg.sh  wapm.toml
src/: cli.rs  config.rs  lib.rs  main.rs  models.rs  persistence.rs
src/cli/: mod.rs  user_input.rs
src/models/author/: author_collection.rs  mod.rs
test_data/persistence/: basic.yml
