[package]
name = "pair-commit-tool"
version = "0.1.0"
authors = ["Josh Jones <ohblonddev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
clap = "^2.33"
dirs = "^2.0.2"
regex = "1.3.1"
mockall = "0.6.0"